--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,5 +28,7 @@ jobs:
 #        run: chmod +x gradlew
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
+        with:
+          version: '8.5'
       - name: Build with Gradle Wrapper
         run: ./gradlew build
