--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Java SB CI with Gradle
+name: CI with Gradle
 
 on:
   push:
@@ -19,16 +19,21 @@ jobs:
     steps:
       - name: Checkout project sources
         uses: actions/checkout@v3
-      - name: Set up JDK 17
+      - name: Setup JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'adopt'
 #      - name: Grant execute permission for gradlew
 #        run: chmod +x gradlew
-      - name: Setup Gradle
+      - name: Setup Gradle 8.5
         uses: gradle/gradle-build-action@v2
         with:
           version: '8.5'
       - name: Build with Gradle Wrapper
         run: ./gradlew build
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: Package
+          path: build/libs
