--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Setup Gradle 8.5
         uses: gradle/gradle-build-action@v2
         with:
-          version: '8.5'
+          gradle-version: '8.5'
       - name: Build with Gradle Wrapper
         run: ./gradlew build
       - name: Upload build artifact
