--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,12 +17,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Setup Node.js 20
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
+#      - name: Setup Node.js 20
+#        uses: actions/setup-node@v4
+#        with:
+#          node-version: '20'
       - name: Checkout project sources
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Setup JDK 17
         uses: actions/setup-java@v3
         with:
