--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-#      - name: Setup Node.js 20
-#        uses: actions/setup-node@v4
-#        with:
-#          node-version: '20'
       - name: Checkout project sources
         uses: actions/checkout@v4
       - name: Setup JDK 17
@@ -35,7 +31,7 @@ jobs:
         with:
           gradle-version: '8.5'
       - name: Build with Gradle Wrapper
-        run: ./gradlew build
+        run: ./gradlew build --scan
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
