--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
+          cache: gradle
 #      - name: Grant execute permission for gradlew
 #        run: chmod +x gradlew
       - name: Setup Gradle 8.5
@@ -31,7 +32,7 @@ jobs:
         with:
           gradle-version: '8.5'
       - name: Build with Gradle Wrapper
-        run: ./gradlew build --scan
+        run: ./gradlew build
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
