--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           gradle-version: '8.5'
       - name: Build with Gradle Wrapper
-        run: ./gradlew build
+        run: ./gradlew build --no-daemon
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
