--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,11 +28,13 @@ jobs:
 #      - name: Grant execute permission for gradlew
 #        run: chmod +x gradlew
       - name: Setup Gradle 8.5
-        uses: gradle/gradle-build-action@v3
+        uses: gradle/actions/setup-gradle@v3
         with:
           gradle-version: '8.5'
-      - name: Build with Gradle Wrapper
-        run: ./gradlew build --no-daemon
+          add-job-summary-as-pr-comment: on-failure
+          arguments: build
+#      - name: Build with Gradle Wrapper
+#        run: ./gradlew build --no-daemon
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
