--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,14 +27,14 @@ jobs:
           cache: gradle
 #      - name: Grant execute permission for gradlew
 #        run: chmod +x gradlew
-      - name: Gradle build
-        uses: gradle/actions/setup-gradle@v3
-        with:
-          gradle-version: '8.5'
-          add-job-summary-as-pr-comment: on-failure
-          arguments: build --no-daemon
-#      - name: Build with Gradle Wrapper
-#        run: ./gradlew build --no-daemon
+#      - name: Gradle build
+#        uses: gradle/actions/setup-gradle@v3
+#        with:
+#          gradle-version: '8.5'
+#          add-job-summary-as-pr-comment: on-failure
+#          arguments: build --no-daemon
+      - name: Build with Gradle Wrapper
+        run: ./gradlew build --no-daemon
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
