--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,14 @@
 name: CI with Gradle
 
-on:
-  push:
-    branches:
-      - main
-      - actions
-  pull_request:
-    branches: [ "main" ]
+#on:
+#  push:
+#    branches:
+#      - main
+#      - actions
+#  pull_request:
+#    branches: [ "main" ]
+
+on: [push, pull_request]
 
 #permissions:
 #  contents: read
@@ -17,9 +19,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout project sources
-        uses: actions/checkout@v4
-      - name: Setup JDK 17
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
