--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,14 +1,12 @@
 name: CI with Gradle
 
-#on:
-#  push:
-#    branches:
-#      - main
-#      - actions
-#  pull_request:
-#    branches: [ "main" ]
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
-on: [push, pull_request]
+#on: [push, pull_request]
 
 #permissions:
 #  contents: read
