--- a/.github/workflows/feature_branch.yml
+++ b/.github/workflows/feature_branch.yml
@@ -15,6 +15,10 @@ on:
       - main
   pull_request:
     branches: [ "main" ]
+  workflow_run:
+    workflows: ["CI with Gradle (Feature branch)"]
+    types:
+      - completed
 
 permissions:
   contents: read
