--- a/.github/workflows/feature_branch.yml
+++ b/.github/workflows/feature_branch.yml
@@ -10,15 +10,12 @@ name: CI with Gradle (Feature branch)
 #    branches: [ "main" ]
 
 on:
-  push:
-    branches-ignore:
-      - main
+#  push:
+#    branches-ignore:
+#      - main
   pull_request:
     branches: [ "main" ]
-  workflow_run:
-    workflows: ["CI with Gradle (Feature branch)"]
-    types:
-      - completed
+    types: [opened, synchronize]
 
 permissions:
   contents: read
