--- a/.github/workflows/feature_branch.yml
+++ b/.github/workflows/feature_branch.yml
@@ -39,6 +39,22 @@ jobs:
         run: |
           echo "The branch name is ${{ env.BRANCH_NAME }}"
 
+      - name: Check if Branch is in PR
+        if: github.event_name == 'push'
+        id: checkbranch
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ env.GITHUB_TOKEN }}
+          script: |
+            check_branch_pr = require('./.github/scripts/check_branch_pr.js')
+            return await check_branch_pr({github, context, core})
+        env:
+          GITHUB_USERNAME: ${{ steps.secrets.outputs.GITHUB_USERNAME }}
+          GITHUB_TOKEN: ${{ steps.secrets.outputs.GITHUB_TOKEN }}
+          GITHUB_ACTOR: ${{ github.actor }}
+          GITHUB_EVENT_NAME: ${{ github.event_name }}
+          BRANCH_NAME: ${{ steps.extract_branch.outputs.BRANCH_NAME }}
+
 #      - name: Validate Gradle wrapper
 #        uses: gradle/wrapper-validation-action@v2
 #
