--- a/.github/workflows/feature_branch.yml
+++ b/.github/workflows/feature_branch.yml
@@ -65,6 +65,10 @@ jobs:
         env:
           BRANCH_IN_PR: ${{ steps.checkbranch.outputs.result }}
 
+      - name: branch in pr?
+        run: |
+          echo "the branch is in pr? ${{ env.BRANCH_IN_PR }}"
+
 #      - name: Validate Gradle wrapper
 #        uses: gradle/wrapper-validation-action@v2
 #
