--- a/.github/workflows/feature_branch.yml
+++ b/.github/workflows/feature_branch.yml
@@ -69,6 +69,11 @@ jobs:
         run: |
           echo "the branch is in pr? ${{ env.BRANCH_IN_PR }}"
 
+      - name: foo
+          if: steps.inprcheck.outputs.BRANCH_IN_PR != 'true'
+          run: |
+            echo "hi"
+
 #      - name: Validate Gradle wrapper
 #        uses: gradle/wrapper-validation-action@v2
 #
