--- a/.github/workflows/feature_branch.yml
+++ b/.github/workflows/feature_branch.yml
@@ -70,7 +70,7 @@ jobs:
           echo "the branch is in pr? ${{ env.BRANCH_IN_PR }}"
 
       - name: foo
-        if: steps.inprcheck.outputs.BRANCH_IN_PR != 'true'
+        if: steps.inprcheck.outputs.BRANCH_IN_PR == 'true'
         run: |
           echo "hi"
 
