--- a/.github/workflows/feature_branch.yml
+++ b/.github/workflows/feature_branch.yml
@@ -74,6 +74,10 @@ jobs:
         run: |
           echo "hi"
 
+      - name: test
+        run: |
+          echo github.event_name
+
 #      - name: Validate Gradle wrapper
 #        uses: gradle/wrapper-validation-action@v2
 #
