--- a/.github/workflows/feature_branch.yml
+++ b/.github/workflows/feature_branch.yml
@@ -76,7 +76,7 @@ jobs:
 
       - name: test
         run: |
-          echo github.event_name
+          echo ${{ github.event_name }}
 
 #      - name: Validate Gradle wrapper
 #        uses: gradle/wrapper-validation-action@v2
